# packages/company-service/public/UserSign/swagger.json
@@ -268,7 +268,19 @@
 						"description": "Data Found",
 						"content": {
 							"application/json": {
-								"schema": {}
+								"schema": {
+									"properties": {
+										"data": {},
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"data",
+										"message"
+									],
+									"type": "object"
+								}
 							}
 						}
 					}
@@ -285,7 +297,19 @@
 						"description": "Successfully retrieved profile",
 						"content": {
 							"application/json": {
-								"schema": {}
+								"schema": {
+									"properties": {
+										"data": {},
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"data",
+										"message"
+									],
+									"type": "object"
+								}
 							}
 						}
 					}
@@ -309,7 +333,19 @@
 						"description": "Successfully Update profile",
 						"content": {
 							"application/json": {
-								"schema": {}
+								"schema": {
+									"properties": {
+										"data": {},
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"data",
+										"message"
+									],
+									"type": "object"
+								}
 							}
 						}
 					}
@@ -361,7 +397,7 @@
 				]
 			}
 		},
-		"/v1/company/posting": {
+		"/v1/company/postjob": {
 			"post": {
 				"operationId": "Postng",
 				"responses": {
@@ -369,7 +405,19 @@
 						"description": "Posting Successfully",
 						"content": {
 							"application/json": {
-								"schema": {}
+								"schema": {
+									"properties": {
+										"data": {},
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"data",
+										"message"
+									],
+									"type": "object"
+								}
 							}
 						}
 					}
@@ -394,7 +442,19 @@
 						"description": "Data Found",
 						"content": {
 							"application/json": {
-								"schema": {}
+								"schema": {
+									"properties": {
+										"data": {},
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"data",
+										"message"
+									],
+									"type": "object"
+								}
 							}
 						}
 					}
@@ -411,7 +471,19 @@
 						"description": "Post Card Found",
 						"content": {
 							"application/json": {
-								"schema": {}
+								"schema": {
+									"properties": {
+										"data": {},
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"data",
+										"message"
+									],
+									"type": "object"
+								}
 							}
 						}
 					}
@@ -435,7 +507,19 @@
 						"description": "Update Successfully",
 						"content": {
 							"application/json": {
-								"schema": {}
+								"schema": {
+									"properties": {
+										"data": {},
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"data",
+										"message"
+									],
+									"type": "object"
+								}
 							}
 						}
 					}
@@ -469,7 +553,19 @@
 						"description": "Delete Successfully",
 						"content": {
 							"application/json": {
-								"schema": {}
+								"schema": {
+									"properties": {
+										"data": {},
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"data",
+										"message"
+									],
+									"type": "object"
+								}
 							}
 						}
 					}
@@ -479,6 +575,47 @@
 					{
 						"in": "path",
 						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/v1/company/posts": {
+			"get": {
+				"operationId": "GetPostsByCompanyId",
+				"responses": {
+					"200": {
+						"description": "Successfully retrieved posts",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"data": {
+											"items": {},
+											"type": "array"
+										},
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"data",
+										"message"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "companyId",
 						"required": true,
 						"schema": {
 							"type": "string"
